--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2719,17 +2719,28 @@ div[data-type='sp'][data-sector='pampa'].selected {
     bottom: 20px;
 
     background: white;
-    border-color: #393838;
-    border-width: 1.5px;
+    padding: 5px;
+    border: black solid 1px;
+    cursor: pointer;
 }
 
-#filters-button {
+#land-use-container {
+    position: relative;
+}
 
+#land-use-button {
+    /* position: relative; */
 }
 
 #checkboxes-container {
-    max-height: 450px;
+    visibility: hidden;
+    position: absolute;
+    max-height: 350px;
     overflow-y: auto;
+    bottom: 100%;
+    background-color: gray;
+    border: black solid 1px;
+    padding: 5px 5px 0 5px;
 }
 
 /* Customize the label (the container) */
