--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2717,11 +2717,9 @@ div[data-type='sp'][data-sector='pampa'].selected {
     z-index: 2000;
     left: 20px;
     bottom: 20px;
-
     background: white;
-    padding: 5px;
+    opacity: 0.9;
     border: black solid 1px;
-    cursor: pointer;
 }
 
 #land-use-container {
@@ -2729,18 +2727,38 @@ div[data-type='sp'][data-sector='pampa'].selected {
 }
 
 #land-use-button {
-    /* position: relative; */
+    padding: 5px 8px;
+    cursor: pointer;
+}
+
+#land-use-button:hover {
+    background-color: #eeeeee;
+}
+
+#land-use-button .fas.fa-filter {
+    padding-right: 5px;
 }
 
 #checkboxes-container {
     visibility: hidden;
     position: absolute;
-    max-height: 350px;
-    overflow-y: auto;
+    max-height: 400px;
+    overflow: auto;
     bottom: 100%;
-    background-color: gray;
+    background-color: #c5c5c5;
     border: black solid 1px;
     padding: 5px 5px 0 5px;
+    width: 350px;
+}
+
+.column-left {
+    float: left;
+    width: 50%;
+}
+
+.column-right {
+    float: right;
+    width: 50%;
 }
 
 /* Customize the label (the container) */
@@ -2778,7 +2796,7 @@ div[data-type='sp'][data-sector='pampa'].selected {
   
   /* On mouse-over, add a grey background color */
   .checkbox-container:hover input ~ .checkmark {
-    background-color: #ccc;
+    background-color: #999;
   }
   
   /* When the checkbox is checked, add a blue background */
