--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2881,15 +2881,15 @@ div[data-type='sp'][data-sector='pampa'].selected {
   }
   
   .checkbox-container input#check-savannah:checked ~ .checkmark {
-    background-color: #red;
+    background-color: red;
   }
   
   .checkbox-container input#check-wet_savannah:checked ~ .checkmark {
-    background-color: #ff5e71;
+    background-color: #f188fb;
   }
   
   .checkbox-container input#check-naked_land:checked ~ .checkmark {
-    background-color: #f188fb;
+    background-color: #ff5e71;
   }
   
   .checkbox-container input#check-urban:checked ~ .checkmark {
