--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     }
 
     .map {
-      height: 46vh; /*make relative*/
+      height: 47vh; 
       background-color: blue;
     }
 
@@ -26,3 +26,104 @@
        height: 15vh;
       }
   
+.h1 #map1_text{
+    font-size: 4vh !important;
+    font-weight: bold;
+
+  }
+
+#map1_text{
+    display: flex; 
+    position: fixed;
+    bottom: 47vh;
+    left: 52vw;
+    z-index: 1000;
+    color: white;
+
+    font-size: 4vh;
+    font-weight: bold;
+  }
+
+#map2_text{
+    display: flex; 
+    position: fixed;
+    bottom: 2vh;
+    left: 52vw;
+    z-index: 1000;
+    color: white;
+
+    font-size: 4vh;
+    font-weight: bold;
+  }
+
+
+#map2_controls{
+
+    display: flex; 
+    position: fixed;
+    font-size: 1.5vh;
+    bottom: 2vh;
+    left: 52vw;
+    z-index: 1000;
+    color: white;
+  }
+
+#tabsPanel{
+
+  height: 45vh;
+  overflow:auto;
+}
+
+#mapControls{
+
+    height: 15vh;
+    overflow: auto;
+}
+
+.rightPanel{
+  background-color:yellow;
+  height: 100vh;
+}
+
+.chart{
+      position: relative;
+      height: 25vh;
+      max-height: 320px;
+      overflow: auto;
+  }
+
+
+/*#radio_container{
+    border: 1px solid white;
+    padding-bottom: 1px;
+    text-align: center;
+  }
+
+
+
+.radio_btn{
+    margin-bottom: 2px;
+    -webkit-appearance: none;
+    width: 1.1rem;
+    height: 1.1rem;
+    outline: none;
+    border-radius: 100%;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    color: white;
+  }
+  /*
+
+  <h3 id="map2_controls">Escenarios</h3>
+
+  #map2_controls{
+
+    display: flex; 
+    position: fixed;
+    font-size: 1vh;
+    bottom: 1vh;
+    left: 55vw;
+    z-index: 1000;
+    color: white;
+  }*/
