--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,91 @@
-    .map-diff-line {
-      grid-area: "map-diff-line";
-      margin: 0 auto;
-      padding: 0;
-      width: 0%;
-      background-color: #ccc;
-    }
+.map-diff-line {
+  grid-area: "map-diff-line";
+  margin: 0 auto;
+  padding: 0;
+  width: 0%;
+  background-color: #ccc;
+}
 
-    .map {
-      height: 47vh; 
-      background-color: blue;
-    }
+.map {
+  height: 47vh;
+  background-color: blue;
+}
 
-    .leyendaHover:hover #leyendaIntegral {
-       display: block;
-      }
-    .leyendaHover:hover #leyendaMin {
-       display: none;
-      }
+.leyendaHover:hover #leyendaIntegral {
+  display: block;
+}
+.leyendaHover:hover #leyendaMin {
+  display: none;
+}
 
-    .leyendaHover #leyendaIntegral {
-       display: none;
-      }
-    .leyendaHover #leyendaMin {
-       display: block;
-       height: 15vh;
-      }
-  
-.h1 #map1_text{
-    font-size: 4vh !important;
-    font-weight: bold;
+.leyendaHover #leyendaIntegral {
+  display: none;
+}
+.leyendaHover #leyendaMin {
+  display: block;
+  height: 15vh;
+}
 
-  }
+.h1 #map1_text {
+  font-size: 4vh !important;
+  font-weight: bold;
+}
 
-#map1_text{
-    display: flex; 
-    position: fixed;
-    bottom: 47vh;
-    left: 52vw;
-    z-index: 1000;
-    color: white;
+#map1_text {
+  display: flex;
+  position: absolute;
+  bottom: 47vh;
+  left: 52vw;
+  z-index: 1000;
+  color: white;
 
-    font-size: 4vh;
-    font-weight: bold;
-  }
+  font-size: 4vh;
+  font-weight: bold;
+}
 
-#map2_text{
-    display: flex; 
-    position: fixed;
-    bottom: 2vh;
-    left: 52vw;
-    z-index: 1000;
-    color: white;
+#map2_text {
+  display: flex;
+  position: absolute;
+  bottom: 2vh;
+  left: 52vw;
+  z-index: 1000;
+  color: white;
 
-    font-size: 4vh;
-    font-weight: bold;
-  }
+  font-size: 4vh;
+  font-weight: bold;
+}
 
+#map2_controls {
+  display: flex;
+  position: fixed;
+  font-size: 1.5vh;
+  bottom: 2vh;
+  left: 52vw;
+  z-index: 1000;
+  color: white;
+}
 
-#map2_controls{
-
-    display: flex; 
-    position: fixed;
-    font-size: 1.5vh;
-    bottom: 2vh;
-    left: 52vw;
-    z-index: 1000;
-    color: white;
-  }
-
-#tabsPanel{
-
+#tabsPanel {
   height: 45vh;
-  overflow:auto;
+  overflow: auto;
 }
 
-#mapControls{
-
-    height: 15vh;
-    overflow: auto;
+#mapControls {
+  height: 15vh;
+  overflow: auto;
 }
 
-.rightPanel{
-  background-color:yellow;
+.rightPanel {
+  background-color: yellow;
   height: 100vh;
 }
 
-.chart{
-      position: relative;
-      height: 25vh;
-      max-height: 320px;
-      overflow: auto;
-  }
-
+.chart {
+  position: relative;
+  height: 25vh;
+  max-height: 320px;
+  overflow: auto;
+}
 
 /*#radio_container{
     border: 1px solid white;
