--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
   color: rgb(0, 255, 0);
   font-weight: bold;
   text-align: left;
+  border: black;
 }
 
 .leyendaHover #leyendaIntegral {
