--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 .leyendaHover #leyendaMin {
   display: block;
-  height: 15vh;
+  /*height: 15vh;*/
 }
 
 .h1 #map1_text {
@@ -66,7 +66,7 @@ body {
 }
 .leyendaHover #leyendaMin {
   display: block;
-  height: 15vh;
+  /*height: 15vh;*/
 }
 
 .h1 #map1_text {
@@ -107,6 +107,11 @@ body {
   z-index: 1000;
   color: white;
 }
+#map2_legend{
+    padding:5px;
+    background-color:white;
+    color:black;
+  }
 
 #tabsPanel {
   border: 1px solid black;
@@ -131,8 +136,8 @@ body {
 
 .chart {
   position: relative;
-  height: 22vh;
-  max-height: 320px;
+  height: 28vh;
+  /*max-height: 320px;*/
   overflow: auto;
 }
 
