--- a/css/styleMAP.css
+++ b/css/styleMAP.css
@@ -40,7 +40,7 @@ max-height: 100%;
 	   /*padding-left: 20px;
 	   padding-right: 20px;*/
 	   border:1px solid #000;
-	   background-color: #D4D4D4;
+	   /*background-color: #D4D4D4;*/
 	   color: #000;
 	   min-width: 30px;
 	   max-width: 500px;
