--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,8 @@ body {
 
   font-size: 4vh;
   font-weight: bold;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 #map2_text {
@@ -96,6 +98,8 @@ body {
 
   font-size: 4vh;
   font-weight: bold;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 .mapControls {
