--- a/css/style_new.css
+++ b/css/style_new.css
@@ -33,8 +33,8 @@ a:hover{
 }
 
 .map {
-  height: 39vh;
-  margin: 0.5% 0.5%;
+  height: 42vh;
+  margin: 0.15% 0.25%;
 }
 
 .leyendaHover:hover #leyendaIntegral {
@@ -133,7 +133,7 @@ a:hover{
 
 .mapControls{
   position: absolute;
-  top: 10vh;
+  bottom: 4vh;
   right: 1vw;
   z-index: 1000;
   color: white;
@@ -141,6 +141,7 @@ a:hover{
   height: 44px;
   font-weight: bold;
   text-align: right;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 #controlyr{
   color: rgba(0, 0, 0, 0.6);
@@ -178,6 +179,7 @@ a:hover{
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
     transition: all 0.1s ease-in-out;
+    text-shadow: none;
 }
 
 .switch-field label:hover {
@@ -206,6 +208,8 @@ a:hover{
   background-color: #7fc46f;
   color: rgba(0, 0, 0, 0.6);
   border-radius: 1px;
+  margin-top:1vh;
+  float: left;
 }
 #changeButton:hover{
     background-color:#aae09e;
@@ -218,6 +222,12 @@ a:hover{
     padding: 1vh;
     color: white;
     float: left;
+}
+#titulo{
+  width: 70%;
+  float: left;
+  height: 6vh;
+  font-size: 30px;
 }
 
 #map2_controls {
@@ -284,17 +294,6 @@ a:hover{
 
 
 /* Landing page */ 
-
-.titulo {
-      font-size: xx-large;
-      text-align: center;
-      position: absolute;
-      top: 30vh;
-      left: 0;
-      right: 0;
-      color: white;
-      margin: 1px 30vh;
-    }
 
 .coolButtonSmall {
     background-color: black;
