--- a/css/historia.css
+++ b/css/historia.css
@@ -43,8 +43,16 @@ h2{
 }
 #area_control .switch-field label{
     font-size: 20px;
-    padding: 9px 13px;
 }
+#area_control .switch-field label:first-of-type {
+    border-radius: 30px 0 0 30px;
+    padding-left: 20px;
+}
+#area_control .switch-field label:last-of-type {
+    border-radius: 0 30px 30px 0;
+    padding-right: 20px;
+}
+
 
 .slidecontainer {
     width: 100%;
@@ -58,13 +66,14 @@ h2{
 .slider {
     -webkit-appearance: none;
     width: 100%;
-    height: 25px;
+    height: 17px;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
     bottom: 1vh;
+    border-radius: 13px;
 }
 
 .slider:hover {
@@ -78,6 +87,7 @@ h2{
     height: 25px;
     background: #4CAF50;
     cursor: pointer;
+    border-radius: 50%;
 }
 
 .slider::-moz-range-thumb {
