--- a/css/style_new.css
+++ b/css/style_new.css
@@ -6,7 +6,7 @@ body {
 
 h2, h1, h6{
   margin: 0;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
 }
 
 
@@ -33,7 +33,7 @@ a:hover{
 }
 
 .map {
-  height: 42vh;
+  height: 46vh;
   margin: 0.15% 0.25%;
 }
 
@@ -91,30 +91,26 @@ a:hover{
   /*height: 15vh;*/
 }
 
-.h1 #map1_text {
-  font-size: 4vh !important;
-  font-weight: bold;
-}
+
 
 #map1_text {
   display: flex;
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 1vw;
-  z-index: 1000;
+  z-index: 500;
   color: white;
   font-size: 4vh;
   font-weight: bold;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
 
 #map2_text {
   display: flex;
   position: absolute;
-  top: 0;
+  bottom: 16vh;
   right: 1vw;
-  z-index: 1000;
+  z-index: 500;
   color: white;
   font-size: 4vh;
   font-weight: bold;
@@ -135,7 +131,7 @@ a:hover{
   position: absolute;
   bottom: 4vh;
   right: 1vw;
-  z-index: 1000;
+  z-index: 500;
   color: white;
   font-size: 2vh;
   height: 44px;
@@ -143,6 +139,8 @@ a:hover{
   text-align: right;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+
 #controlyr{
   color: rgba(0, 0, 0, 0.6);
   top: 10vh;
@@ -155,8 +153,9 @@ a:hover{
 }
 
 .switch-field {
-    display: flex;
-    overflow: hidden;
+  display: flex;
+  margin: auto;
+  width: fit-content;
 }
 
 .switch-field input {
@@ -169,65 +168,137 @@ a:hover{
 }
 
 .switch-field label {
-    background-color: #e4e4e4;
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 11px;
-    line-height: 1;
-    text-align: center;
-    padding: 6px 10px;
-    margin-right: -1px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-    transition: all 0.1s ease-in-out;
-    text-shadow: none;
+  background-color: #aae09e;
+  color: black;
+  font-size: 11px;
+  line-height: 1;
+  text-align: center;
+  padding: 2px 5px;
+  margin-right: -1px;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  transition: all 0.1s ease-in-out;
+  text-shadow: none;
+  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 .switch-field label:hover {
     cursor: pointer;
-    background-color:#aae09e
+    background-color:#7fc46f;
 }
 
 .switch-field input:checked + label {
     background-color: #7fc46f;
-    box-shadow: none;
+    color: white;
 }
 
 .switch-field label:first-of-type {
-    border-radius: 1px 0 0 1px;
+    border-radius: 18px 0 0 18px;
+    padding-left: 12px;
 }
 
 .switch-field label:last-of-type {
-    border-radius: 0 1px 1px 0;
+    border-radius: 0 18px 18px 0;
+    padding-right: 12px;
 }
 
-
-#changeButton{
+.mapControls_scenario{
+  position: absolute;
+  bottom: 3vh;
+  right: 1vw;
+  z-index: 1000;
+  color: black;
+  padding: 8px;
   font-size: 2vh;
-  padding: 3px 6px;
-  border: solid #7fc46f 1px;
+  height: fit-content;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px black solid;
+}
+
+.escenarios-field {
+  display: block;
+  position: relative;
+  padding-left: 4vh;
+  margin: 3px;
+  cursor: pointer;
+  font-size: 2vh;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.escenarios-field input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2.5vh;
+  width: 2.5vh;
+  border-radius: 50%;
+  border: 2px #aae09e solid;
+}
+
+/* On mouse-over, add a background color */
+.escenarios-field:hover input ~ .checkmark {
+  background-color: #aae09e
+}
+
+/* When the radio button is checked, add a blue background */
+.escenarios-field input:checked ~ .checkmark {
   background-color: #7fc46f;
-  color: rgba(0, 0, 0, 0.6);
-  border-radius: 1px;
-  margin-top:1vh;
-  float: left;
+  border: none;
 }
-#changeButton:hover{
-    background-color:#aae09e;
-    text-decoration: none;
+
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
 }
+
+/* Show the indicator (dot/circle) when checked 
+.escenarios-field input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) 
+.escenarios-field .checkmark:after {
+ 	top: 0.5vh;
+	left: 0.5vh;
+	width: 1.5vh;
+	height: 1.5vh;
+	border-radius: 50%;
+	background: white;
+}*/
+
 
 #mapTitle {
-    width: 100%; 
+  width: fit-content;
     z-index: 500;
-    padding: 1vh;
+    padding: 0 2vh 2vh 2vh;
+    color: black;
+    position: relative;
+    top: 2px;
     color: white;
-    float: left;
+    background-color: white;
+    height: fit-content;
+    margin: auto;
+    border-radius: 10px;
+    border: 1px black solid;
 }
 #titulo{
-  width: 70%;
-  float: left;
   height: 6vh;
   font-size: 30px;
+  color: black;
 }
 
 #map2_controls {
