added links to data and fixed styling charts

--- a/css/style_new.css
+++ b/css/style_new.css
@@ -372,7 +372,8 @@ a:hover{
 }
 #chartTAH1, #chartTAH, #chartPEM1, #chartPEM{
 
-  height: 36vh;
+  height: 20vh;
+  width: 60vh;
 }
 
 #rightPanelPampa h4{
